package com.example.thechoiceisyours

import androidx.appcompat.app.AppCompatActivity
import android.os.Bundle

class StoryProgression : AppCompatActivity() {
    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        setContentView(R.layout.activity_story_progression)
    }
}